[package]
name = "slimshader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.24"
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
wgpu = "0.9"
futures = "0.3"
bytemuck = { version = "1.5", features = [ "derive" ] }
anyhow = "1.0"
pollster = "0.2"