[package]
name = "slimshader"
authors = ["Werner Laurensse <werner@alman.ax>"]
version = "0.1.0"
edition = "2018"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"
env_logger = "0.8"
log = "0.4"
wgpu = "0.9"
futures = "0.3"
bytemuck = { version = "1.5", features = [ "derive" ] }
anyhow = "1.0"
pollster = "0.2"
notify = "4.0.17"
